Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -82,6 +82,7 @@
     "alias-general-info": "Permet donar un nom al valor de la columna de l'esquerra",
     "alias-wildcard-info": "Valor d'àlies definit prèviament. Exemple:% import%,% vat%",
     "all": "Tots",
+    "all-companies": "Totes les empreses",
     "all-variants": "Totes les variants",
     "allow-delete": "Permetre eliminar",
     "allow-delete-data": "Permetre ESBORRAT",
@@ -1121,6 +1122,7 @@
     "no-plugins-installed": "No hi ha plugins instal·lats",
     "no-print-permission": "No teniu permís per imprimir o exportar",
     "no-reference": "Sense referència",
+    "no-results": "Sense resultats",
     "no-results-found": "No s'han trobat resultats",
     "no-selected-item": "Cap element seleccionat",
     "no-stock": "No controlar stock",
@@ -1718,6 +1720,7 @@
     "total": "Total",
     "total-amount": "Suma total",
     "total-cost": "Cost total",
+    "total-customers": "Total Clients",
     "total-pending": "Total pendent",
     "total-purchases": "Total compres",
     "total-sales": "Total vendes",
