--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -82,6 +82,7 @@
     "alias-general-info": "Permite dar un nombre al valor de la columna de su izquierda",
     "alias-wildcard-info": "Valor del alias definido previamente. Ejplo: %base%, %cuota%",
     "all": "Vše",
+    "all-companies": "Todas las empresas",
     "all-variants": "Všechny možnosti",
     "allow-delete": "Povolit smazání",
     "allow-delete-data": "Permitir BORRADO",
@@ -1121,6 +1122,7 @@
     "no-plugins-installed": "Nejsou nainstalovány žádné pluginy.",
     "no-print-permission": "No tiene permiso para imprimir o exportar",
     "no-reference": "Bez reference",
+    "no-results": "Žádné výsledky",
     "no-results-found": "Nebyly nalezeny žádné výsledky",
     "no-selected-item": "Ningún elemento seleccionado",
     "no-stock": "No controlar stock",
@@ -1718,6 +1720,7 @@
     "total": "Total",
     "total-amount": "Suma total",
     "total-cost": "Coste total",
+    "total-customers": "Celkem zákazníků",
     "total-pending": "Celkový zůstatek",
     "total-purchases": "Total compras",
     "total-sales": "Total ventas",
