--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -82,6 +82,7 @@
     "alias-general-info": "erlaubt dem Wert der linken Spalte einen Namen zu geben.",
     "alias-wildcard-info": "Wert des zuvor definierten Alias. Beispiel:%import%, %vat%",
     "all": "Alles",
+    "all-companies": "Alle Unternehmen",
     "all-variants": "Alle Varianten",
     "allow-delete": "Löschen zulassen",
     "allow-delete-data": "Löschen erlaubt",
@@ -1121,6 +1122,7 @@
     "no-plugins-installed": "Es sind keine Plugins installiert",
     "no-print-permission": "Sie haben keine Berechtigung zum Drucken oder Exportieren.",
     "no-reference": "Keine Referenz",
+    "no-results": "Keine Ergebnisse",
     "no-results-found": "Keine Ergebnisse gefunden",
     "no-selected-item": "Keine Elemente ausgewählt",
     "no-stock": "Kein Bestand",
@@ -1718,6 +1720,7 @@
     "total": "Gesamt",
     "total-amount": "Gesamtbetrag",
     "total-cost": "Gesamtkosten",
+    "total-customers": "Gesamtkunden",
     "total-pending": "Ausstehender Gesamtbetrag",
     "total-purchases": "Gesamteinkäufe",
     "total-sales": "Gesamtverkäufe",
