--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -82,6 +82,7 @@
     "alias-general-info": "Allows you to give a name to the value of the column on your left",
     "alias-wildcard-info": "Alias value previously defined. Example: %import%, %vat%",
     "all": "All",
+    "all-companies": "All companies",
     "all-variants": "All variants",
     "allow-delete": "Allow delete",
     "allow-delete-data": "Allow DELETE",
@@ -1121,6 +1122,7 @@
     "no-plugins-installed": "No plugins installed",
     "no-print-permission": "You do not have permission to print or export",
     "no-reference": "No reference",
+    "no-results": "No results",
     "no-results-found": "No results found",
     "no-selected-item": "No selected item",
     "no-stock": "Do not control stock",
@@ -1718,6 +1720,7 @@
     "total": "Total",
     "total-amount": "Total amount",
     "total-cost": "Total cost",
+    "total-customers": "Total customers",
     "total-pending": "Total pending",
     "total-purchases": "Total purchases",
     "total-sales": "Total sales",
