--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -82,6 +82,7 @@
     "alias-general-info": "Bere ezkerreko zutabeko balioari izena jartzen uzten du",
     "alias-wildcard-info": "Aurrez definitutako alias balioa. Adib. %oinarri%, %kuota%",
     "all": "Denak",
+    "all-companies": "Todas las empresas",
     "all-variants": "Aldaera guztiak",
     "allow-delete": "Ezabatzea baimenduta",
     "allow-delete-data": "Baimendu EZABATZEA",
@@ -1121,6 +1122,7 @@
     "no-plugins-installed": "Pluginik ez daude instaladoak",
     "no-print-permission": "Ez duzu inprimatzeko edo esportatzeko baimenik",
     "no-reference": "Erreferentziarik gabe",
+    "no-results": "Emaitzarik ez",
     "no-results-found": "No se han encontrado resultados",
     "no-selected-item": "Ez da elementurik aukeratu",
     "no-stock": "Stocka ez kontrolatu",
@@ -1718,6 +1720,7 @@
     "total": "Totala",
     "total-amount": "Batuketa totala",
     "total-cost": "Kostu totala",
+    "total-customers": "Total Clientes",
     "total-pending": "Guztira zain",
     "total-purchases": "Erosketa totala",
     "total-sales": "Salmenta totala",
