--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -82,6 +82,7 @@
     "alias-general-info": "Vous permet de donner un nom à la valeur de la colonne sur votre gauche",
     "alias-wildcard-info": "Valeur de l'alias précédemment définie. Exemple : %import%, %vat%",
     "all": "Tout",
+    "all-companies": "Toutes les entreprises",
     "all-variants": "Toutes les variantes",
     "allow-delete": "Autoriser la suppression",
     "allow-delete-data": "Autoriser SUPPRIMER",
@@ -1121,6 +1122,7 @@
     "no-plugins-installed": "Aucun plugin n’est installé",
     "no-print-permission": "No tiene permiso para imprimir o exportar",
     "no-reference": "Pas de référence",
+    "no-results": "Aucun résultat",
     "no-results-found": "Aucun résultat trouvé",
     "no-selected-item": "Aucun élément sélectionné",
     "no-stock": "Ne pas contrôler le stock",
@@ -1718,6 +1720,7 @@
     "total": "Total",
     "total-amount": "Montant total",
     "total-cost": "Coût total",
+    "total-customers": "Total des clients",
     "total-pending": "Total en attente",
     "total-purchases": "Total des achats",
     "total-sales": "Total des ventes",
