--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -82,6 +82,7 @@
     "alias-general-info": "Permite dar un nome ao valor da columna da súa esquerda",
     "alias-wildcard-info": "Valor do alias definido previamente. Explo: %base%, %cuota%",
     "all": "Todo",
+    "all-companies": "Todas as empresas",
     "all-variants": "Todas las variantes",
     "allow-delete": "Permitir eliminar",
     "allow-delete-data": "Permitir BORRADO",
@@ -1121,6 +1122,7 @@
     "no-plugins-installed": "Non hai plugins instalados",
     "no-print-permission": "Non ten permiso para imprimir ou exportar",
     "no-reference": "Sen referencia",
+    "no-results": "Sen resultados",
     "no-results-found": "Non se atoparon resultados",
     "no-selected-item": "Ningún elemento seleccionado",
     "no-stock": "Non controlar stock",
@@ -1718,6 +1720,7 @@
     "total": "Total",
     "total-amount": "Suma total",
     "total-cost": "Custo total",
+    "total-customers": "Total de clientes",
     "total-pending": "Total pendente",
     "total-purchases": "Total compras",
     "total-sales": "Total vendas",
