--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -82,6 +82,7 @@
     "alias-general-info": "Consente di assegnare un nome al valore della colonna a sinistra.",
     "alias-wildcard-info": "Valore alias definito in precedenza. Esempio: %import%, %vat%",
     "all": "Tutti",
+    "all-companies": "Todas las empresas",
     "all-variants": "Tutte le varianti",
     "allow-delete": "Consenti eliminazione",
     "allow-delete-data": "DELETE zulassen",
@@ -1121,6 +1122,7 @@
     "no-plugins-installed": "Nessun plugin installato",
     "no-print-permission": "Non ha il permesso di stampare o esportare",
     "no-reference": "Senza riferimento",
+    "no-results": "Nessun risultato",
     "no-results-found": "Nessun risultato trovato",
     "no-selected-item": "Nessun elemento selezionato",
     "no-stock": "Nessun stock",
@@ -1718,6 +1720,7 @@
     "total": "Totale",
     "total-amount": "somma totale",
     "total-cost": "Costo totale",
+    "total-customers": "Totale clienti",
     "total-pending": "Totale in sospeso",
     "total-purchases": "Acquisti totali",
     "total-sales": "Vendite totali",
