--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -82,6 +82,7 @@
     "alias-general-info": "Pozwala nadać nazwę wartości w kolumnie po lewej stronie",
     "alias-wildcard-info": "Wartość aliasu zdefiniowanego wcześniej. Na przykład: %base%, %składka%",
     "all": "Wszystkie",
+    "all-companies": "Todas las empresas",
     "all-variants": "Wszystkie warianty",
     "allow-delete": "Zezwól na usunięcie",
     "allow-delete-data": "Zezwalaj na USUNIĘCIE",
@@ -1121,6 +1122,7 @@
     "no-plugins-installed": "Brak zainstalowanych wtyczek",
     "no-print-permission": "Nie masz uprawnień do drukowania lub eksportowania",
     "no-reference": "Brak odniesienia",
+    "no-results": "Brak wyników",
     "no-results-found": "Nie znaleziono wyników",
     "no-selected-item": "Nie wybrano żadnego elementu",
     "no-stock": "Brak kontrolowania zapasów",
@@ -1718,6 +1720,7 @@
     "total": "Razem",
     "total-amount": "Suma całkowita",
     "total-cost": "Całkowity koszt",
+    "total-customers": "Łączna liczba klientów",
     "total-pending": "Całkowita kwota do zapłaty",
     "total-purchases": "Całkowite zakupy",
     "total-sales": "Całkowita sprzedaż",
