--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -82,6 +82,7 @@
     "alias-general-info": "Permite que você dê um nome ao valor da coluna à sua esquerda",
     "alias-wildcard-info": "Valor do alias definido anteriormente. Exemplo: %import%, %vat%",
     "all": "Todos",
+    "all-companies": "Todas las empresas",
     "all-variants": "Todas as variantes",
     "allow-delete": "Permitir excluir",
     "allow-delete-data": "Permitir DELETE",
@@ -1121,6 +1122,7 @@
     "no-plugins-installed": "Não há plugins instalados",
     "no-print-permission": "Sem permissão para imprimir ou exportar",
     "no-reference": "Sem referência",
+    "no-results": "Sem resultados",
     "no-results-found": "Não foram encontrados resultados",
     "no-selected-item": "Nenhum item selecionado",
     "no-stock": "Sem controle de estoque",
@@ -1718,6 +1720,7 @@
     "total": "Total",
     "total-amount": "Valor total",
     "total-cost": "Custo total",
+    "total-customers": "Total de clientes",
     "total-pending": "Total pendente",
     "total-purchases": "Total das Compras",
     "total-sales": "Total das Vendas",
