--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -82,6 +82,7 @@
     "alias-general-info": "Permite que você dê um nome ao valor da coluna à sua esquerda",
     "alias-wildcard-info": "Valor do alias definido anteriormente. Exemplo: %import%, %vat%",
     "all": "Todos",
+    "all-companies": "Todas las empresas",
     "all-variants": "Todas as variantes",
     "allow-delete": "Permitir apagar",
     "allow-delete-data": "Permitir ELIMINAR",
@@ -400,7 +401,7 @@
     "customers": "clientes",
     "customize": "Personalizar",
     "daily": "Diário",
-    "daily-executions": "Ejecuciones diarias",
+    "daily-executions": "Execuções diárias",
     "dasboard-backup-li1": "Se você excluir ou desinstalar o FacturaScripts, perderá os dados.",
     "dasboard-backup-li2": "Se excluir ou desinstalar o XAMPP, perderá os dados.",
     "dasboard-backup-li3": "S",
@@ -1121,6 +1122,7 @@
     "no-plugins-installed": "Não há plugins instalados",
     "no-print-permission": "Não tem permissão para imprimir ou exportar",
     "no-reference": "Sem referência",
+    "no-results": "Sem resultados",
     "no-results-found": "Não foram encontrados resultados",
     "no-selected-item": "Nenhum item selecionado",
     "no-stock": "Sem stock",
@@ -1718,6 +1720,7 @@
     "total": "Total",
     "total-amount": "Valor total",
     "total-cost": "Custo total",
+    "total-customers": "Total de clientes",
     "total-pending": "Total pendente",
     "total-purchases": "Total das Compras",
     "total-sales": "Total das Vendas",
