--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -82,6 +82,7 @@
     "alias-general-info": "Permet donar-li un nom al valor de la columna a la seu esquerra",
     "alias-wildcard-info": "Valor de l'àlies definit prèviament. Eixemple:% base%,% quota%",
     "all": "Tots",
+    "all-companies": "Totes les empreses",
     "all-variants": "Totes les variants",
     "allow-delete": "Permetre borrar",
     "allow-delete-data": "Permet SUPRIMIR",
@@ -1121,6 +1122,7 @@
     "no-plugins-installed": "No hi ha plugins instal·lats",
     "no-print-permission": "No té permís per imprimir o exportar",
     "no-reference": "Sense referència",
+    "no-results": "Sense resultats",
     "no-results-found": "No s'han trobat resultats",
     "no-selected-item": "No hi ha cap element seleccionat",
     "no-stock": "No hi ha estoc",
@@ -1718,6 +1720,7 @@
     "total": "Total",
     "total-amount": "Suma total",
     "total-cost": "total-cost",
+    "total-customers": "Total de clients",
     "total-pending": "Total pendent",
     "total-purchases": "total-purchases",
     "total-sales": "total-sales",
