--- a/Core/Translation/es_DO.json
+++ b/Core/Translation/es_DO.json
@@ -82,6 +82,7 @@
     "alias-general-info": "Permite dar un nombre al valor de la columna de su izquierda",
     "alias-wildcard-info": "Valor del alias definido previamente. Ejemplo: %base%, %cuota%",
     "all": "Todos",
+    "all-companies": "Todas las empresas",
     "all-variants": "Todas las variantes",
     "allow-delete": "Permitir eliminar",
     "allow-delete-data": "Permitir BORRADO",
@@ -1121,6 +1122,7 @@
     "no-plugins-installed": "No hay plugins instalados",
     "no-print-permission": "No tiene permiso para imprimir o exportar",
     "no-reference": "Sin referencia",
+    "no-results": "Sin resultados",
     "no-results-found": "No se han encontrado resultados",
     "no-selected-item": "Ningún elemento seleccionado",
     "no-stock": "No controlar stock",
@@ -1718,6 +1720,7 @@
     "total": "Total",
     "total-amount": "Suma total",
     "total-cost": "Coste total",
+    "total-customers": "Total Clientes",
     "total-pending": "Total pendiente",
     "total-purchases": "Total compras",
     "total-sales": "Total ventas",
