--- a/Core/Translation/tr_TR.json
+++ b/Core/Translation/tr_TR.json
@@ -82,6 +82,7 @@
     "alias-general-info": "Sol taraftaki sütun değerine bir isim vermenizi sağlar",
     "alias-wildcard-info": "Önceden tanımlanmış takma ad değeri. Örnek: %base%, %cuota%",
     "all": "Tüm",
+    "all-companies": "Todas las empresas",
     "all-variants": "Tüm varyantlar",
     "allow-delete": "Silmeye izin ver",
     "allow-delete-data": "SİLMEYE İZİN VER",
@@ -1121,6 +1122,7 @@
     "no-plugins-installed": "Hiçbir eklenti yüklenmedi",
     "no-print-permission": "Yazdırma veya dışa aktarma izniniz yok",
     "no-reference": "Referans yok",
+    "no-results": "Sonuç bulunamadı",
     "no-results-found": "Sonuç bulunamadı",
     "no-selected-item": "Seçilen hiç öğe yok",
     "no-stock": "Stok kontrol edilmemiş",
@@ -1718,6 +1720,7 @@
     "total": "Toplam",
     "total-amount": "Toplam Tutar",
     "total-cost": "Toplam maliyet",
+    "total-customers": "Toplam müşteri sayısı",
     "total-pending": "Toplam bekleyen",
     "total-purchases": "Toplam satın alma",
     "total-sales": "Toplam satışlar",
