Actualizadas las traducciones.

--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1307,7 +1307,7 @@
     "previously-purchased-from-supplier": "Acquistato in precedenza dal fornitore",
     "previously-sold-to-customer": "Venduto precedentemente al cliente",
     "price": "Prezzo",
-    "price-adjusted-tax-method": "Ajustado a precio con impuestos",
+    "price-adjusted-tax-method": "Adeguato al prezzo con imposte",
     "price-with-tax": "Prezzo + tasse",
     "principal": "Principale",
     "print": "Stampare",
