--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -98,7 +98,7 @@
     "already-installed": "Já instalado",
     "already-installed-p": "O programa já está instalado",
     "always-to-company-email": "Sempre para o email da empresa",
-    "always-to-config-email": "Siempre al email de la configuración",
+    "always-to-config-email": "Sempre para o email de configuração",
     "amount": "Montante",
     "amount-without-discount": "Preço sem desconto",
     "and": "e",
