--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -875,7 +875,7 @@
     "invoice-receipts-diff": "Hay una diferencia (%diff%) entre el importe de la factura y la suma de sus recibos.",
     "invoice-regularized-cant-change-date": "La factura se encuentra dentro de una regularización de %tax%. No se puede modificar la fecha.",
     "invoice-regularized-cant-delete": "La factura se encuentra dentro de una regularización de %tax% No se puede eliminar.",
-    "invoice-without-acc-entry": "Factura sin asiento",
+    "invoice-without-acc-entry": "Faktura bez účetního zápisu",
     "invoiced": "Facturado",
     "invoices": "Facturas",
     "invoices-cant-generate-new-docs": "Las facturas no pueden generar nuevos documentos",
@@ -1309,6 +1309,7 @@
     "price": "Precio",
     "price-adjusted-tax-method": "Ajustado a precio con impuestos",
     "price-with-tax": "Precio + impuestos",
+    "priceitems": "P. Items",
     "principal": "Principal",
     "print": "Imprimir",
     "print-bank-data": "Tisk bankovních údajů",
