--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1309,6 +1309,7 @@
     "price": "Preis",
     "price-adjusted-tax-method": "Ajustado a precio con impuestos",
     "price-with-tax": "Preis + Steuer",
+    "priceitems": "Artikelpreis",
     "principal": "Main",
     "print": "Drucken",
     "print-bank-data": "Bankdaten drucken",
