--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1309,6 +1309,7 @@
     "price": "Price",
     "price-adjusted-tax-method": "Price-adjusted (taxes included)",
     "price-with-tax": "Price with tax",
+    "priceitems": "P. Items",
     "principal": "Main",
     "print": "Print",
     "print-bank-data": "Print bank account",
