--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1309,6 +1309,7 @@
     "price": "Prezioa",
     "price-adjusted-tax-method": "Zergak barne dituen prezioari egokitua",
     "price-with-tax": "Prezioa + zergak",
+    "priceitems": "P. Elementuak",
     "principal": "Nagusia",
     "print": "Inprimatu",
     "print-bank-data": "Banku-kontua inprimatu",
