--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1309,6 +1309,7 @@
     "price": "Prix",
     "price-adjusted-tax-method": "Ajusté au prix TTC",
     "price-with-tax": "Prix TTC",
+    "priceitems": "P. Articles",
     "principal": "Principale",
     "print": "Impression",
     "print-bank-data": "Imprimer le compte bancaire",
