--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1309,6 +1309,7 @@
     "price": "Prezo",
     "price-adjusted-tax-method": "Axustado a prezo con impostos",
     "price-with-tax": "prezo con impostos",
+    "priceitems": "P. Items",
     "principal": "Principal",
     "print": "Imprimir",
     "print-bank-data": "Imprimir conta bancaria",
