--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1309,6 +1309,7 @@
     "price": "Cena",
     "price-adjusted-tax-method": "Ajustado a precio con impuestos",
     "price-with-tax": "Cena + podatki",
+    "priceitems": "P. przedmioty",
     "principal": "Główny",
     "print": "Drukuj",
     "print-bank-data": "Imprimir cuenta bancaria",
