--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -82,7 +82,7 @@
     "alias-general-info": "Permite que você dê um nome ao valor da coluna à sua esquerda",
     "alias-wildcard-info": "Valor do alias definido anteriormente. Exemplo: %import%, %vat%",
     "all": "Todos",
-    "all-companies": "Todas las empresas",
+    "all-companies": "Todas as empresas",
     "all-variants": "Todas as variantes",
     "allow-delete": "Permitir excluir",
     "allow-delete-data": "Permitir DELETE",
@@ -1309,6 +1309,7 @@
     "price": "Preço",
     "price-adjusted-tax-method": "Ajustado a precio con impuestos",
     "price-with-tax": "preço-com-imposto",
+    "priceitems": "preçoitens",
     "principal": "Principal",
     "print": "Imprimir",
     "print-bank-data": "Imprimir dados bancários",
