--- a/Core/Translation/tr_TR.json
+++ b/Core/Translation/tr_TR.json
@@ -1309,6 +1309,7 @@
     "price": "Fiyat",
     "price-adjusted-tax-method": "Ajustado a precio con impuestos",
     "price-with-tax": "Fiyat + vergiler",
+    "priceitems": "P. Öğeler",
     "principal": "Ana",
     "print": "Yazdır",
     "print-bank-data": "Banka hesap bilgilerini yazdır",
