--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1309,6 +1309,7 @@
     "price": "Preu",
     "price-adjusted-tax-method": "Ajustat a preu amb impostos",
     "price-with-tax": "Preu + impostos",
+    "priceitems": "priceitems",
     "principal": "Principal",
     "print": "Imprimir",
     "print-bank-data": "Imprimir compte bancari",
