--- a/Core/Translation/es_DO.json
+++ b/Core/Translation/es_DO.json
@@ -1309,6 +1309,7 @@
     "price": "Precio",
     "price-adjusted-tax-method": "Ajustado a precio con impuestos",
     "price-with-tax": "Precio + impuestos",
+    "priceitems": "P. Items",
     "principal": "Principal",
     "print": "Imprimir",
     "print-bank-data": "Imprimir cuenta bancaria",
