--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1309,6 +1309,7 @@
     "price": "Prezzo",
     "price-adjusted-tax-method": "Adeguato al prezzo con imposte",
     "price-with-tax": "Prezzo + tasse",
+    "priceitems": "P. Items",
     "principal": "Principale",
     "print": "Stampare",
     "print-bank-data": "stampa dati bancari",
