--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -82,7 +82,7 @@
     "alias-general-info": "Permite que você dê um nome ao valor da coluna à sua esquerda",
     "alias-wildcard-info": "Valor do alias definido anteriormente. Exemplo: %import%, %vat%",
     "all": "Todos",
-    "all-companies": "Todas las empresas",
+    "all-companies": "Todas as empresas",
     "all-variants": "Todas as variantes",
     "allow-delete": "Permitir apagar",
     "allow-delete-data": "Permitir ELIMINAR",
@@ -1309,6 +1309,7 @@
     "price": "Preço",
     "price-adjusted-tax-method": "Ajustado a precio con impuestos",
     "price-with-tax": "Preço + impostos",
+    "priceitems": "preçoitens",
     "principal": "a Principal",
     "print": "Impressão",
     "print-bank-data": "Imprimir conta bancária",
