Acrualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -401,7 +401,7 @@
     "customers": "Kunden",
     "customize": "Personalisieren",
     "daily": "Täglich",
-    "daily-executions": "Ejecuciones diarias",
+    "daily-executions": "Tägliche Ausführungen",
     "dasboard-backup-li1": "Wenn Sie FacturaScripts löschen oder deinstallieren, verlieren Sie die Daten.",
     "dasboard-backup-li2": "Wenn Sie XAMPP löschen oder deinstallieren, verlieren Sie die Daten.",
     "dasboard-backup-li3": "Wenn Sie den PC verlieren, formatieren oder zerstören, verlieren Sie die Daten.",
@@ -1307,7 +1307,7 @@
     "previously-purchased-from-supplier": "Früher vom Lieferanten gekauft",
     "previously-sold-to-customer": "Zuvor an den Kunden verkauft",
     "price": "Preis",
-    "price-adjusted-tax-method": "Ajustado a precio con impuestos",
+    "price-adjusted-tax-method": "An den Preis inkl. Steuern angepasst",
     "price-with-tax": "Preis + Steuer",
     "priceitems": "Artikelpreis",
     "principal": "Main",
