--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -82,7 +82,7 @@
     "alias-general-info": "Consente di assegnare un nome al valore della colonna a sinistra.",
     "alias-wildcard-info": "Valore alias definito in precedenza. Esempio: %import%, %vat%",
     "all": "Tutti",
-    "all-companies": "Todas las empresas",
+    "all-companies": "Tutte le aziende",
     "all-variants": "Tutte le varianti",
     "allow-delete": "Consenti eliminazione",
     "allow-delete-data": "DELETE zulassen",
