--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1307,7 +1307,7 @@
     "previously-purchased-from-supplier": "Comprado anteriormente ao fornecedor",
     "previously-sold-to-customer": "Vendido anteriormente ao cliente",
     "price": "Preço",
-    "price-adjusted-tax-method": "Ajustado a precio con impuestos",
+    "price-adjusted-tax-method": "Ajustado ao preço com impostos",
     "price-with-tax": "preço-com-imposto",
     "priceitems": "preçoitens",
     "principal": "Principal",
