Actualizadas las traducciones.

--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1662,7 +1662,7 @@
     "supported-tax-subaccount": "Subconta de imposto suportada",
     "surcharge": "Sobretaxa",
     "surname": "Sobrenome",
-    "suspended": "Suspenso",
+    "suspended": "Desativado",
     "swift": "Rápido\/BIC",
     "symbol": "Símbolo",
     "table": "Tabela",
@@ -1679,7 +1679,7 @@
     "tax-area": "Área de impostos",
     "tax-areas": "Áreas de impostos",
     "tax-base": "Base Tributável",
-    "tax-calculation-method": "Método cálculo impuestos",
+    "tax-calculation-method": "Método de cálculo de impostos",
     "tax-credit-account": "Conta de crédito para impostos",
     "tax-debit-account": "Conta de débito para impostos",
     "tax-transport": "Impostos do transporte",
