Actualizadas las traducciones.

--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -82,7 +82,7 @@
     "alias-general-info": "Pozwala nadać nazwę wartości w kolumnie po lewej stronie",
     "alias-wildcard-info": "Wartość aliasu zdefiniowanego wcześniej. Na przykład: %base%, %składka%",
     "all": "Wszystkie",
-    "all-companies": "Todas las empresas",
+    "all-companies": "Wszystkie firmy",
     "all-variants": "Wszystkie warianty",
     "allow-delete": "Zezwól na usunięcie",
     "allow-delete-data": "Zezwalaj na USUNIĘCIE",
@@ -1307,7 +1307,7 @@
     "previously-purchased-from-supplier": "Zakupione wcześniej od dostawcy",
     "previously-sold-to-customer": "Sprzedano wcześniej klientowi",
     "price": "Cena",
-    "price-adjusted-tax-method": "Ajustado a precio con impuestos",
+    "price-adjusted-tax-method": "Dostosowane do ceny z podatkami",
     "price-with-tax": "Cena + podatki",
     "priceitems": "P. przedmioty",
     "principal": "Główny",
