--- a/Core/Translation/tr_TR.json
+++ b/Core/Translation/tr_TR.json
@@ -25,7 +25,7 @@
     "account-parent-error": "Ana hesap yanlış veya döneme ait değil",
     "accounting": "Muhasebe",
     "accounting-accounts": "Muhasebe hesapları",
-    "accounting-balance": "Bilanço",
+    "accounting-balance": "Muhasebe bakiyesi",
     "accounting-balances": "Bakiyeler",
     "accounting-concept": "Muhasebe Kavramı",
     "accounting-data-missing": "%exerciseName% dönemi için muhasebe planı bulunamadı",
@@ -35,7 +35,7 @@
     "accounting-entry-date": "Muhasebe giriş tarihi",
     "accounting-entry-macros-text": "<p>Açıklama alanında bilgileri otomatik doldurmak için özel anahtar kelimeler (makrolar) kullanabilirsiniz:<\/p><dl><dt>Belge adı<\/dt><dd><strong>%document%<\/strong> yazarak belge kimliğini ekleyebilirsiniz.<\/dd><dt>Mevcut tarih<\/dt><dd><strong>%date%<\/strong> yazarak mevcut tarihi ekleyebilirsiniz.<\/dd><dt>Giriş tarihi<\/dt><dd><strong>%date-entry%<\/strong> yazarak muhasebe kaydı tarihini ekleyebilirsiniz.<\/dd><dt>Ay<\/dt><dd><strong>%month%<\/strong> yazarak muhasebe kaydının tarihinin ay adını ekleyebilirsiniz.<\/dd><\/dl>",
     "accounting-entry-macros-title": "Açıklama alanında makroların kullanımı",
-    "accounting-exercise-not-found": "Dönem bulunamadı",
+    "accounting-exercise-not-found": "Egzersiz bulunamadı",
     "accounting-file": "Muhasebe Dosyası",
     "accounting-heading": "Başlık",
     "accounting-heading-code": "Başlık Kimliği",
@@ -52,7 +52,7 @@
     "actions": "Eylemler",
     "active": "Aktif",
     "actual-cost-price": "Gerçek maliyet fiyatı",
-    "add": "Ekle",
+    "add": "Eklemek",
     "add-all-disabled": "Tümü Eklenemedi",
     "add-all-enabled": "Hepsini ekle etkin",
     "add-extra-lines": "Ekstra satırlar ekle",
@@ -82,7 +82,7 @@
     "alias-general-info": "Sol taraftaki sütun değerine bir isim vermenizi sağlar",
     "alias-wildcard-info": "Önceden tanımlanmış takma ad değeri. Örnek: %base%, %cuota%",
     "all": "Tüm",
-    "all-companies": "Todas las empresas",
+    "all-companies": "Tüm şirketler",
     "all-variants": "Tüm varyantlar",
     "allow-delete": "Silmeye izin ver",
     "allow-delete-data": "SİLMEYE İZİN VER",
@@ -98,7 +98,7 @@
     "already-installed": "Zaten kurulu",
     "already-installed-p": "Program zaten yüklü",
     "always-to-company-email": "Her zaman şirketin e-posta adresine",
-    "always-to-config-email": "Siempre al email de la configuración",
+    "always-to-config-email": "Ayarlar e-postasına her zaman ulaşın",
     "amount": "Tutar",
     "amount-without-discount": "İndirim olmadan fiyat",
     "and": "ve",
