Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -401,7 +401,7 @@
     "customers": "Clientes",
     "customize": "Personalizar",
     "daily": "Diario",
-    "daily-executions": "Ejecuciones diarias",
+    "daily-executions": "Denní provedení",
     "dasboard-backup-li1": "Pokud smažete nebo odinstalujete FakturaScripty, ztratíte data.",
     "dasboard-backup-li2": "Pokud smažete nebo odinstalujete XAMPP, ztratíte data.",
     "dasboard-backup-li3": "Pokud ztratíte, formátujete nebo zničíte počítač, ztratíte data.",
@@ -1780,7 +1780,7 @@
     "unlock-entry": "Desbloquear",
     "unpaid": "Impagado",
     "unsafe-file": "Nepodporovaný soubor",
-    "unsafe-file-p": "Z bezpečnostních důvodů bráníme stahování některých typů souborů, jako je tento: %file%",
+    "unsafe-file-p": "Z bezpečnostních důvodů neumožňujeme stahování některých typů souborů, například tohoto: %file%",
     "until-accounting-entry": "Hasta asiento",
     "until-date": "Hasta",
     "until-hour": "Hora fin",
