Actualizadas las traducciones.

--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -536,7 +536,7 @@
     "downloads": "Pobrania",
     "drag": "Przeciągnij",
     "dto": "Dto.",
-    "dto-2": "Dto. 2",
+    "dto-2": "Rabat 2",
     "duplicate-customer-name-or-cif": "Istnieje klient o tej samej nazwie lub CIF\\\/NIF",
     "duplicate-record": "Duplikat rekordu",
     "duplicated-reference": "Zduplikowana referencja: '%reference%'",
