--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1762,7 +1762,7 @@
     "type-success": "Tipo correto",
     "type-warning": "Tipo de advertência",
     "unbalance": "Desequilíbrio",
-    "unbalanced-accounting-entry": "Asiento descuadrado",
+    "unbalanced-accounting-entry": "Lançamento contábil desequilibrado",
     "unbalanced-entry": "Lançamento desequilibrado",
     "unchecked": "Sem checar",
     "under-minimums": "Abaixo do mínimo",
