--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1576,7 +1576,7 @@
     "sort-by-price-desc": "Ordenar por preço descendente",
     "sort-by-ref-asc": "Ordenar por referência asc.",
     "sort-by-ref-desc": "Ordenar por referência desc.",
-    "sort-by-stock-asc": "Ordenar por stock ascendente",
+    "sort-by-stock-asc": "Ordenar por stock crescente",
     "sort-by-stock-desc": "Ordenar por stock descendente",
     "sorted-asc": "Ordenado ascendentes",
     "sorted-desc": "Ordenado de forma descendente",
